static/sass/styles.scss
/* ... */
.scroll-section__indicator {
  position: absolute;
  left: -1rem;
  width: 0.2rem;
  height: 3.5rem;
  z-index: 2;
  border-radius: 3rem;
  background: rgb(255 255 255);
  transition: top 0.3s ease;
}

.scroll-section__indicator--outline {
  position: absolute;
  left: -1rem;
  width: 0.2rem;
  height: 10rem;
  border-radius: 3rem;
  background: #707070;
}

.scroll-section__tab {
  all: unset;
  padding: 10px;
  cursor: pointer;
  text-align: center;
  display: inline-flex;
  align-items: center;
  gap: 0.4em;

  /* stylelint-disable-next-line no-descending-specificity */
  hr {
    display: none;
  }

  .scroll-section__tab-icon {
    position: relative;

    .p-lottie--container {
      position: absolute;
      left: 0;
      top: 0;
      opacity: 0;
    }
  }
  @media screen and (width < $breakpoint-large) {
    padding: 0 1rem;
    position: relative;
  }
}

.scroll-section__tab:hover {
  background-color: transparent;
}

.scroll-section__tab.active {
  @media screen and (width < $breakpoint-large) {
    hr {
      position: absolute;
      display: block;
      width: 100%;
      left: 0;
      bottom: -9px;
      height: 3px;
      background-color: white;
    }
  }
}

.scroll-section__contentArea {
  flex: 1;
  min-height: 16rem;
  position: relative;
  overflow: hidden;
}

.scroll-section__content {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  overflow: hidden;
  height: max-content;
  transform: translateY(100px);
  pointer-events: none;
  transition: opacity 0.4s ease, transform 0.4s ease;

  .p-equal-height-row {
    gap: 0 0.5rem;
  }
}

.scroll-section__content.active {
  opacity: 1;
  transform: translateY(0);
  pointer-events: auto;
  z-index: 2;
}

.scroll-section__content.slide-out-up {
  transform: translateY(-100px);
  opacity: 0;
  z-index: 1;
}

.scroll-section__content h2 {
  margin-top: 0;
}

body:not(.js-enabled) {
  .scroll-section__contentArea {
    overflow: visible;
    min-height: auto;
  }

  .scroll-section__content {
    position: static;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    opacity: 1;
    height: auto;
    transform: none;
    pointer-events: auto;
    transition: none;
    z-index: auto;
  }

  .scroll-section__content.active {
    opacity: 1;
    transform: none;
    pointer-events: auto;
    z-index: auto;
  }

  .scroll-section__content.slide-out-up {
    transform: none;
    opacity: 1;
    z-index: auto;
  }
}

.u-align--cta {
  align-self: center;
  margin-bottom: 1.25rem;
}

// Adjustment for juju community page tab logos. Copied over from juju.is/charmhub-community
.p-juju-community-tabs__logo {
  display: block;
  height: 64px;
  width: auto;
}

.p-suru--bottom-right {
  background-image: url("#{$assets-path}a6474c5b-Suru%20top%20%20right%20angle.png");
  background-position: bottom right;
  background-repeat: no-repeat;
  background-size: 200px 149px;

  @media only screen and (min-width: $breakpoint-large) {
    background-size: contain;
  }
}

// For in between spacing for groups of links in a CTA block
.p-cta-block--space-between {
  @extend .p-cta-block;
  justify-content: space-between;
}

// Removes border from first item in detailed stepped list
.u-no-top-border.p-stepped-list--detailed
  .p-stepped-list__item:first-child::after {
  content: none !important;
}

// Styles to make tables scrollable on smaller screens
@media screen and (max-width: #{ $breakpoint-large - 1 }) and (min-width: $breakpoint-small) {
  .u-table-scroll--medium {
    overflow-x: hidden;

    table {
      display: block;
      overflow-x: auto;
      white-space: nowrap;
    }
  }
}

@media screen and (max-width: #{ $breakpoint-small - 1 }) {
  .u-table-scroll--small {
    overflow-x: hidden;

    table {
      display: block;
      overflow-x: auto;
      white-space: nowrap;
    }
  }
}

// Events and roadshows
#browse-events-table tbody tr:last-child {
  border-bottom: 1px solid $colors--theme--border-low-contrast;
}

// Adjust navigation to be below meganav
.p-in-page-navigation {
  top: 4rem;
}

@media screen and (width < 1036px) {
  [class^=grid-col]:has(>.p-in-page-navigation) {
    top: 3.5rem;
  }
}

.p-markdown {
  h2 {
    padding-top: .55rem !important;
  }

  h3, h4 {
    padding-top: .45rem !important;
  }
}

.p-knowledge-breadcrumbs__item {
  font-weight: 400 !important;
  margin-right: 0;
}

.p-knowledge-breadcrumbs {
  list-style: none;
  margin-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.p-knowledge-breadcrumbs__item--home::after,
.p-knowledge-breadcrumbs__item:not(:last-child)::after {
  content: "/";
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.p-case-study__filters {
  display: flex;
  gap: $spv--large;
  @media screen and (width < $breakpoint-small) {
    flex-direction: column;
    padding-bottom: $spv--x-large;
    
    .p-case-study__filter-heading {
      margin-bottom: 0;
    }
  }
}

.p-case-study__filter-select {
  background-color: $color-paper;
  border: none;
  max-width: min-content;
  text-overflow: ellipsis;

  @media screen and (width < $breakpoint-small) {
    padding-left: 0;
  }
}

.p-pagination__case-study {
  @extend .p-pagination;
  @media screen and ($breakpoint-large > width) {
    justify-content: center;
  }
}

.p-case-study__cards {
  @media screen and (width < $breakpoint-small) {
    .p-content-card__image-wrapper {
      display: none;
    }

    .p-content-card__hover-content {
      display: none;
    }

    .p-content-card {
      height: auto;
      min-height: unset;
    }

    .p-content-card__body {
      grid-template-rows: auto;
    }
  }
}

